--- a/src/main/java/com/mycompany/hangmanprojectv1/Endgame.form
+++ b/src/main/java/com/mycompany/hangmanprojectv1/Endgame.form
@@ -89,6 +89,7 @@
     <Component class="javax.swing.JButton" name="End">
       <Properties>
         <Property name="text" type="java.lang.String" value="End"/>
+        <Property name="toolTipText" type="java.lang.String" value="Ends the game"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EndActionPerformed"/>
