--- a/src/main/java/com/mycompany/hangmanprojectv1/Scores.form
+++ b/src/main/java/com/mycompany/hangmanprojectv1/Scores.form
@@ -100,6 +100,7 @@
         <Component class="javax.swing.JButton" name="Back">
           <Properties>
             <Property name="text" type="java.lang.String" value="Back"/>
+            <Property name="toolTipText" type="java.lang.String" value="Back to start screen"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BackActionPerformed"/>
